Adjust native-image build args: export sun.awt/font modules